# MyUtils

./: .gitignore  .gitlab-ci.yml  README.md  Readme.md  index.html  index.md  keywords.md
.github/workflows/: workflow.yml
AWS/: .gitignore  EC2.md  Lambda.md  README.md
AWS/S3backet/: index.md
BinaryHack/: 00_00_脆弱性コンストラクタ_デストラクタ.md  00_GDB_ASSEMBLA.md  01_ThreadSafe_Mutex.md  05_ランタイムHack.md  README.md  tlsTest.cpp
BinaryHack/BinaryAnalysisASM/: index.md
BinaryHack/BinaryAnalysisASM/src/: test.c
BinaryHack/Hacking/: 00_Hacking基礎.md  00_脆弱性コンストラクタ_デストラクタ.md  01_GOT.md  02_Network.md  02_Network2.md  03_シェルコード.md
BinaryHack/バイナリ解析_asm/: index.md
CSharp/: index.md
CSharp/blazor/: index.md
CSharp/src/: async_await.cs
CSharp/src/Defrate/: defrate.cs  index.md
CSharp/src/udpSock/: index.md  udpTest.cs
CSharp/src/websocket/: index.html  ws_server.cs
Clang/: .gitignore  Cmake.md  FunctionParameter.md  MFC.md  MakeFile.md  README.md  SafeResource.md  SharedMemory.md  construct.md  cpp.md  inline.md  lambda.md  openGL.md  pararel.md  preprocessor.md  raw_socket.md
Clang/cpp/: index.md  map.md  mmap.md
Clang/src/: .gitignore  CMakeLists.txt  Makefile  dump.c  dump.cpp  dump.h  pcap_sniff.cpp  raw_socket_sniff.cpp  simple_server.cpp
Clang/src/asm/: asm.cpp  index.md
Clang/src/boost/: CMakeLists.txt  boost_log.cpp  boost_log.h  boost_sample.cpp  index.md
Clang/src/boost/websocket/: index.html  socket_sample.cpp
Clang/src/etc/: copyConstruct.cpp
Clang/src/googletest/: CMakeLists.txt  MockTest.cpp  MockTrtle.h  README.md  Turtle.h  gtest1.cpp  target.cpp  target.h
Clang/src/hook/: index.md  printhook.cpp  sample.cpp
Clang/src/opengl/: .gitignore  CMakeLists.txt  bitmap.h  conv.cpp  conv.h  egl_offscreen.cpp  fData.txt  offscreenglfw.cpp  openGL.md  render_context.cpp  render_context.h  rendering_main.cpp  test.cpp  test2.cpp  vData.txt
Clang/src/opengl/glfw/: CMakeLists.txt  offscreenglfw.cpp
Clang/src/opengl/shader/: SimpleFragmentShader.flag  SimpleVertexShader.vrtx  shader_test.cpp
Clang/src/pararel/: InterProc.md  SimpleThread.cpp  SimpleThread.h  pararel.md  rwlock.cpp  rwlock2.cpp
Clang/src/pararel/mappedMemory/: mmap.md  sample_a.cpp  sample_b.cpp
Clang/src/pararel/pthread/: CMakeLists.txt  pthreadSample.cpp  rwlock2.cpp
Clang/src/pararel/semaphore/: CMakeLists.txt  forkinter.cpp  forkinter.h  interproc_a.cpp  interproc_b.cpp
Clang/src/pararel/shareMem/: CMakeLists.txt  forkShareMem.cpp
Clang/src/popen/: sample.cpp
Clang/src/pthread_sort/: bubbleSort.cpp  bucketSort.cpp  input.txt  sort.md
Clang/src/sharedMem/: README.md  shared1.cpp  shared2.cpp
Clang/src/socket/: client.cpp  dump.h  isDir.cpp  network_hack.h  simple_server.cpp  simple_server_pthread.cpp
Clang/src/thread/: SimpleThread.cpp  barrier.cpp
Docker/: DockerCompose.md  InOutSizeOf.md  README.md  WhatDockerfile.md  dockerNetwork.md
Docker/Kubernetes/: index.md
Docker/src/: GitLab.yml  Mongo.yml  docker-compose.Devs.yml  docker-compose.jenk.yml  docker-compose.redmine.yml  docker-compose.wordpress.yml  dockerComposeGitLab.yml  dockerComposeRedmine.yml  jenkins.yml  redmine.yml  swarm.yml
Docker/src/RHEL/: Dockerfile
FireWall/: Firewall.html  Firewall.md
Frontend/: css.md  html.md  index.md  tips.md
Frontend/src/css/: test1.html
Git/: howToUseGit.md  index.md
Java/: index.md
Java/HelloWorld/: index.md
Java/Jsp/: docker-compose.tomcat.yml  docker-compose.yml  index.md
JavaScript/: index.md  npm.md
JavaScript/DeviceAccess/: camera.js  index.md
JavaScript/DeviceAccess/sample/: camera.js  index.html
JavaScript/DeviceAcess/: index.html
JavaScript/Electron/: electron.md  index.html  index.js
JavaScript/FoxExtentions/: index.md
JavaScript/FoxExtentions/Rec/: manifest.json  menu.html
JavaScript/Glaph/: index.md
JavaScript/Glaph/c3/: .gitignore  sample.html
JavaScript/Glaph/highchart/: .gitignore  index.md  sample.css  sample.html  sample.js  sample2.js
JavaScript/Jest/: index.md
JavaScript/React/ReactNative/: cppModule.md  index.md
JavaScript/Vue/: index.md
JavaScript/Vue/VueNative/: index.md
JavaScript/WebGL/: index.md  sample.html
JavaScript/WebGL/sample/: index.html  webgl-demo.js
JavaScript/WebGL/sample2/: draw-scene.js  init-buffers.js  webgl-demo.js
JavaScript/WebGL/shader/: GLSL.md  index.md
JavaScript/src/: .gitignore  HelloClass.js  asyncSample.js  jsqery_sample.js
JavaScript/websocket/: index.html
JavaScript/websocket/server/: index.js
JavaScript/websocket2/: server.js
JavaScript/websocket2/public/: index.html
JavaScript/websocket2/utils/: getLocalIp.js
Linux/: filesystem.md  index.md  samba.md
Linux/FireWall/: Firewall.md
Linux/ShellScript/: index.md
Linux/socketfile/: index.md  unix_sock_client.cpp  unix_sock_serv.cpp
PlantUML/: index.md  sample_class.pu
PlantUML/sample/: sample_class.pu
Python/: index.md
Python/RestAPI/: Dockerfile  index.md  main.py
Python/async/: async.py
Python/pandas/: matplot.md  pandas_tuto.html  pandas_tuto.md
Python/tensorflow/: makeModel.md
Redmine/: index.md
RegExp/: regularExpression.html  regularExpression.md
SQL/: AboutIndex.md  README.md  oracle.md  partation.sql  tips.md
SQL/oracle/: index.md  partition.md
SQL/sqlserver/: index.md  performance.md
ShellScript/: index.md  test.sh
WebRTC/: .gitignore  index.md
WebRTC/sample/: index.html  webrtc.js  webrtc_server.js
Windows/: index.md  net.md  performance.md
Windows/ActiveDirectry/: index.md
Windows/Debug/: index.md
Windows/PowerShell/: index.md  ip_setting.md
Windows/SQLServer/: index.md
Windows/VBA/: index.md
Windows/cl/: index.md
Windows/cmd/: index.md
WireShark/: index.md  lua.md
bitOp/: index.md
html/: README.md  chart.css  index.md  learn1.html  read_loc_xml.html  test.xml
html/LearnCss/: LearnCss.html  test1.css
html/leaf/: leaf.html  leaflet_common.js
object-oriented/: index.md
object-oriented/PlantUML/: index.md
sandbox/: index.md
sqlite3/: index.md
tensorflow/: index.md  makeModel.md  prepare.md
(+15 files in other folders)
